--- a/app/src/main/res/layout/activity_gunluk_harcama_limitim.xml
+++ b/app/src/main/res/layout/activity_gunluk_harcama_limitim.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#66b8be"
     tools:context="com.gobletsoft.gunlukharcamam.gunlukHarcamaLimitim">
 
     <TextView
@@ -13,6 +14,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
+        android:gravity="center"
+        android:text="@string/textViewEldekiPara"
         app:layout_constraintEnd_toStartOf="@+id/editTextEldekiPara"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,19 +25,21 @@
         android:layout_width="166dp"
         android:layout_height="42dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="58dp"
         android:ems="10"
-        android:inputType="number"
+        android:gravity="center_horizontal|center"
+        android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textViewGunlukSabitGiderler"
+        android:id="@+id/textViewSabitGiderler"
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="@string/textViewSabitGiderler"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewEldekiPara" />
 
@@ -45,9 +50,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="@string/textViewKalanGunSayisi"
         app:layout_constraintEnd_toStartOf="@+id/editTextKalanGunSayisi"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewGunlukSabitGiderler" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewSabitGiderler" />
 
     <EditText
         android:id="@+id/editTextKalanGunSayisi"
@@ -57,10 +64,11 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="number"
+        android:gravity="center"
+        android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/buttonHesapla"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewGunlukSabitGiderler"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSabitGiderler"
         app:layout_constraintVertical_bias="0.545" />
 
     <Button
@@ -71,13 +79,14 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="80dp"
+        android:background="#4a9aa1"
         android:text="@string/buttonHesapla"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewKalanGunSayisi"
-        app:layout_constraintVertical_bias="0.217" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonSabitGiderEkle"
@@ -86,10 +95,11 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
+        android:background="#4a9aa1"
         android:text="@string/buttonSabitGider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.183"
-        app:layout_constraintStart_toEndOf="@+id/textViewGunlukSabitGiderler"
+        app:layout_constraintStart_toEndOf="@+id/textViewSabitGiderler"
         app:layout_constraintTop_toBottomOf="@+id/editTextEldekiPara" />
 
     <TextView
@@ -100,6 +110,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
+        android:gravity="center"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextKalanGunSayisi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
